--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,7 @@
 
 :root {
   --background: #ffffff;
-  --foreground: #171717;
+  --foreground: #323131;
 }
 
 @theme inline {
@@ -14,12 +14,13 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #252424;
     --foreground: #ededed;
   }
 }
 
 body {
+  padding: 2rem;
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
